<resources>
    <string name="app_name">MyTournament</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registrarse">Registrarse</string>
    <string name="email">Correo Electrónico</string>
    <string name="Id">Identificación</string>
    <string name="Phone">Teléfono</string>
    <string name="User">Nombre De Usuario</string>

    <string name="app_title">MyTournament</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nombre Usuario</string>
    <string name="nav_header_subtitle">user@user.com</string>
    <string name="nav_header_desc">Encabezado</string>

    <string name="menu_feed">Torneos activos</string>
    <string name="menu_mistorneos">Mis torneos</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_paypal">PayPal</string>
    <string name="menu_logout">Cerrar Sesión</string>
    <string name="menu_free_space"> </string>

    <string name="createTournament">Crear torneo</string>
    <string name="descriptionTournament">Descripción del torneo</string>
    <string name="nameTournament">Nombre del torneo</string>
    <string name="startTournament">Fecha de incio</string>
    <string name="endTournament">Fecha de finalización</string>
    <string name="formatTournament">Formato del torneo</string>
    <string name="teamsTournament">Cantidad de equipos</string>
    <string name="matchesTournament">Cantidad de partidos</string>
    <string name="logoTournament">Logo del torneo</string>
    <string name="nextTournament">Siguiente</string>
    <string name="cancelTournament">Cancelar</string>
    <string name="addTournamentPhoto">Subir foto para perfil del torneo</string>
    <string name="imageTournamentDescription">imagen del torneo</string>
    <string name="uploadPhotoTournament">Seleccionar imagen</string>
    <string name="home">Volver al menú principal</string>
    <string name="finishRegisterTournament">Finalizar registro</string>
    <string name="scoreboard_home">Goles de la casa</string>
    <string name="scoreboard_visitor">Goles del visitante</string>
    <string name="createTournament">Crear torneo</string>
    <string name="descriptionTournament">Descripción del torneo</string>
    <string name="nameTournament">Nombre del torneo</string>
    <string name="startTournament">Fecha de incio</string>
    <string name="endTournament">Fecha de finalización</string>
    <string name="formatTournament">Formato del torneo</string>
    <string name="teamsTournament">Cantidad de equipos</string>
    <string name="matchesTournament">Cantidad de partidos</string>
    <string name="logoTournament">Logo del torneo</string>
    <string name="nextTournament">Siguiente</string>
    <string name="cancelTournament">Cancelar</string>
    <string name="addTournamentPhoto">Subir foto para perfil del torneo</string>
    <string name="imageTournamentDescription">imagen del torneo</string>
    <string name="uploadPhotoTournament">Seleccionar imagen</string>
    <string name="home">Volver al menú principal</string>
    <string name="finishRegisterTournament">Finalizar registro</string>

    <string-array name="types">
        <item>Tabla General</item>
        <item>Grupos</item>
        <item>Eliminación</item>
    </string-array>

</resources>