<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/fragmentFeedDestination">

    <fragment
        android:id="@+id/fragmentFeedDestination"
        android:name="com.mobile.heroes.mytournament.ui.feed.FragmentFeedDestination"
        android:label="@string/menu_feed"
        tools:layout="@layout/fragment_feed_destination" />

    <fragment
        android:id="@+id/nav_mistorneos"
        android:name="com.mobile.heroes.mytournament.ui.mistorneos.MisTorneosFragment"
        android:label="@string/menu_mistorneos"
        tools:layout="@layout/fragment_mistorneos" />

    <fragment
        android:id="@+id/nav_favoritos"
        android:name="com.mobile.heroes.mytournament.ui.favoritos.FavoritosFragment"
        android:label="@string/menu_favoritos"
        tools:layout="@layout/fragment_favoritos" />

    <fragment
        android:id="@+id/nav_paypal"
        android:name="com.mobile.heroes.mytournament.ui.paypal.PayPalFragment"
        android:label="@string/menu_paypal"
        tools:layout="@layout/fragment_paypal" />
</navigation>