<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris"
    tools:context=".ui.createTournament.upload_image_tournament">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@color/azul"
        android:paddingTop="8dp"
        android:text="@string/addTournamentPhoto"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        style="@style/myTournamentTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="228dp"
        android:layout_height="200dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/imageTournamentDescription"
        android:scaleType="fitCenter"
        android:background="@drawable/ic_tournament_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSelect"
        style="@style/myTournamentTitle"
        android:layout_width="237dp"
        android:layout_height="49dp"
        android:layout_marginTop="64dp"
        android:text="@string/uploadPhotoTournament"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="1000dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo">

    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmitPhoto"
        style="@style/myTournamentTitle"
        android:layout_width="237dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:text="@string/finishRegisterTournament"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="1000dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSelect">

    </com.google.android.material.button.MaterialButton>


</androidx.constraintlayout.widget.ConstraintLayout>